# zabi-rs

./: Cargo.toml  README.md  ROADMAP.md
.github/workflows/: benchmark.yml  ci.yml  pages.yml  publish.yml
benches/: comparison.rs
docs/: design.md  roadmap.md
scripts/: update_benchmarks.py
src/: decoder.rs  error.rs  event.rs  lib.rs  types.rs  zbytes_fixed.rs
tests/: core_features.rs
zabi-derive/: Cargo.toml
zabi-derive/src/: lib.rs
