[package]
name = "zabi-rs"
version = "0.0.6"
edition = "2021"
description = "Zero-Allocation ABI Decoder for Rust"
license = "MIT"
repository = "https://github.com/smallyunet/zabi-rs"

[dependencies]
thiserror = { version = "1.0", default-features = false }
zabi-derive = { path = "./zabi-derive", optional = true }

[features]
default = ["derive"]
derive = ["dep:zabi-derive"]

[dev-dependencies]
criterion = "0.5"
alloy-sol-types = "0.8"
ethers = "2.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] } # ethers often needs tokio

[[bench]]
name = "comparison"
harness = false
